Can make base disk image identical to mkfs with create-test-images

--- a/filesystems-checker/Makefile
+++ b/filesystems-checker/Makefile
@@ -1,4 +1,9 @@
-all: xcheck.c
+all: xcheck create-test-imgs
+
+create-test-imgs: create-test-imgs.c
+	gcc -o create-test-imgs create-test-imgs.c -Wall -Werror -O
+
+xcheck: xcheck.c
 	gcc -o xcheck xcheck.c -Wall -Werror -O
 
 clean:
