Pass test for "ERROR: direct address used more than once."

--- a/filesystems-checker/Makefile
+++ b/filesystems-checker/Makefile
@@ -7,7 +7,7 @@ xcheck: xcheck.c
 	gcc -o xcheck xcheck.c -Wall -Werror -O
 
 clean:
-	rm xcheck create-test-imgs tests/*.img
+	rm xcheck create-test-imgs tests/*.img tests-out/* && rmdir tests-out
 
 test:
 	make && ./create-test-imgs && ./test-xcheck.sh
